package: fix exception handling in DeflateThread (related tdf#91807)

In the bugdoc of tdf#91807 there are at least 49 corrupt zip streams
that raise exceptions in the DeflateThreads.  Because the maximum
allowed number of threads happens to be 48, this results in an infinite
loop in ZipOutputStream::reduceScheduledThreadsToGivenNumberOrLess().

(regression from 7e2ea27e5d56f5cf767a6718a0f5edc28e24af14)

In case an exception is thrown, don't re-throw it immediately, which
might cause trouble such as leaking all of the ZipOutputEntry instances
in m_aEntries.

(cherry picked from commit 8d8b9b80b114b94b20b0bf1438d80e925b49e3bf)

sfx2: exception on storage commit is an error (related: tdf#91807)

For no good or obvious reason, SfxMedium::StorageCommit_Impl() swallows
embed::UseBackupException if there is a pTempFile, which (as the comment
claims) is "always now".  This results in the temp file actually being
copied to the user-visible file and the SaveAs "succeeding", when it
clearly did not.

Also move the exception throwing to the end of ZipOutputStream::finish()
to avoid more memory leaks.

(cherry picked from commit 9084c11fb472f2024e609770ce922c911227e7a8)

Change-Id: I448cc43291754ef20adfa6b65916282fcc365a11
Reviewed-on: https://gerrit.libreoffice.org/26618
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 60f668ba594c08aa935887ecd0e76d6ba016f166)