sfx2/source/doc/docfile.cxx
@@ -1620,10 +1620,10 @@ bool SfxMedium::StorageCommit_Impl()
                                 OSL_ENSURE( !pImp->m_aName.isEmpty(), "The exception _must_ contain the temporary URL!\n" );
                             }
                         }
-
-                        if ( !GetError() )
-                            SetError( ERRCODE_IO_GENERAL, OSL_LOG_PREFIX );
                     }
+
+                    if (!GetError())
+                        SetError( ERRCODE_IO_GENERAL, OSL_LOG_PREFIX );
                 }
                 catch ( const uno::Exception& )
                 {
